[package]
name = "memset-nt-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.2.0", features = ["derive"] }
libfuzzer-sys = "0.4"
memset-nt = { path = ".." }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
